[gd_scene load_steps=11 format=3 uid="uid://dw2fqgynxjcit"]

[ext_resource type="Script" path="res://Characters/Player/PlayerCharacterController/player_character_controller.gd" id="1_bw5ol"]
[ext_resource type="Script" path="res://Characters/Player/PlayerCharacterController/laser_gun_handler.gd" id="2_paldi"]
[ext_resource type="PackedScene" uid="uid://d1kvhwjb0iy8m" path="res://Characters/Player/player_character.tscn" id="2_u8dgg"]
[ext_resource type="PackedScene" uid="uid://c2nwpx3t8tmc0" path="res://Components/StateMachine/state_machine.tscn" id="3_aoc7a"]
[ext_resource type="Script" path="res://Game/none_state.gd" id="4_7is3e"]
[ext_resource type="Script" path="res://Game/inventory_state.gd" id="5_fsdf8"]
[ext_resource type="Script" path="res://Game/placing_object_state.gd" id="6_1j2hy"]
[ext_resource type="Script" path="res://Game/pickup_stuff_handler.gd" id="7_bmrc0"]
[ext_resource type="Script" path="res://Game/handle_placing_object.gd" id="8_4yuco"]
[ext_resource type="PackedScene" uid="uid://b0pmkjnlnl8p0" path="res://Objects/LaserGun/laser_gun.tscn" id="9_03qrv"]

[node name="PlayerCharacterController" type="Node2D"]
script = ExtResource("1_bw5ol")

[node name="LaserGunHandler" type="Node" parent="." node_paths=PackedStringArray("player_character", "laser_gun")]
script = ExtResource("2_paldi")
player_character = NodePath("../PlayerCharacter")
laser_gun = NodePath("../LaserGun")

[node name="PlayerCharacter" parent="." instance=ExtResource("2_u8dgg")]

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.4, 1.4)
process_callback = 0
position_smoothing_enabled = true
position_smoothing_speed = 20.0
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_vertical_offset = 0.9
drag_left_margin = 0.01
drag_right_margin = 0.01

[node name="UIStateMachine" parent="." node_paths=PackedStringArray("initial_state") instance=ExtResource("3_aoc7a")]
initial_state = NodePath("None")

[node name="None" type="Node" parent="UIStateMachine" node_paths=PackedStringArray("inventory_state", "pickup_stuff_handler")]
script = ExtResource("4_7is3e")
inventory_state = NodePath("../Inventory")
pickup_stuff_handler = NodePath("../../PickupStuffHandler")

[node name="Inventory" type="Node" parent="UIStateMachine" node_paths=PackedStringArray("none_state", "placing_state")]
script = ExtResource("5_fsdf8")
none_state = NodePath("../None")
placing_state = NodePath("../PlacingObject")

[node name="PlacingObject" type="Node" parent="UIStateMachine" node_paths=PackedStringArray("place_object_handler", "none_state")]
script = ExtResource("6_1j2hy")
place_object_handler = NodePath("../../PlaceObjectHandler")
none_state = NodePath("../None")

[node name="PickupStuffHandler" type="Node" parent="."]
script = ExtResource("7_bmrc0")

[node name="PlaceObjectHandler" type="Node2D" parent="."]
script = ExtResource("8_4yuco")

[node name="LaserGun" parent="." instance=ExtResource("9_03qrv")]
firing = false
